Added endpoints for each db table
